feat: Added alert to give user feedback about search state
Added user feedback to inform the user when the app is busy searching for books
or when there are no books found.

--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,11 @@ body, .app {
   border: none;
   outline: none;
 }
+.search-alert {
+  color: dimgrey;
+  padding-top: 100px;
+  text-align: center;
+}
 
 .close-search {
   display: block;
